--- a/src/app/course-overview/course-overview.component.html
+++ b/src/app/course-overview/course-overview.component.html
@@ -4,7 +4,8 @@
       happy plate academy
     </div>
     <div class="navbar-right">
-      <a class="create" routerLink='/create-lesson'>creeër les</a>
+      <a class="create pr-3" routerLink='/editor'>editor</a>
+      <a class="create pr-3" routerLink='/create-lesson'>creeër les</a>      
     </div>    
   </div>
 </div>
