--- a/src/app/edit-lesson/edit-lesson.component.css
+++ b/src/app/edit-lesson/edit-lesson.component.css
@@ -1,17 +1,12 @@
-.create-lesson-title{
+.edit-lesson-title{
     border: none;
     padding: .5rem 0rem;
-    font-size: 2.5rem;
-    font-family: inherit;
-    font-weight: 300;
-    line-height: 1.25;
-    color: #36434d;
 }
 
 .textEditor-controls{
     border: 1px solid #e0e0e0;    
     border-radius: 50px;
-    width: 521px;
+    width: 475px;
 }
 
 .textEditor-control-list{
@@ -63,35 +58,4 @@ li{
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);    
-}
-
-.defaultValue{
-  color: #b3b3b1;
-}
-
-.defaultValue--prompt{
-    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    letter-spacing: 0;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-}
-
-.image-upload{
-    position: relative;
-}
-
-.image-upload .input-file{
-    position: absolute;
-    top:0;
-    left: 0;
-    height: 54px;
-    width: 46px;
-    opacity: 0;
-}
-
-.figure-container{
-    height: 509px;
-    max-height: 700px;
-    background-color: green;
 }
