--- a/src/app/edit-lesson/edit-lesson.component.html
+++ b/src/app/edit-lesson/edit-lesson.component.html
@@ -1,38 +1,23 @@
-<div class="user-courses-navbar">      
-  <div class="user-courses-navbar navbar navbar-fixed-top bg-info">    
-    <div class="navbar-brand text-white">
-      happy plate academy
-    </div>
-    <div class="navbar-right">
-      
-    </div>    
+<div class="edit-lesson-navbar navbar navbar-fixed-top bg-info">    
+  <div class="navbar-brand text-white">
+    happy plate academy
   </div>
+  <div class="navbar-right">
+    
+  </div>    
 </div>
-<div class="create-lesson-content">
+<div class="edit-lesson-content">
   <div class="container">
-    <div class="row justify-content-center py-4">
-      <!-- <div class="col-12 col-md-4">        
-        <div class="py-1">
-          <h5>Titel:</h5>
-          <div><p style="color: #e0e0e0;">De titel toont de naam van deze les.</p></div>        
-        </div>
-      </div> -->
+    <div class="row justify-content-center py-5">      
       <div class="col-12 col-md-8">
-        <div class="py-1">
-          <!-- <div><h5>Titel:</h5></div> -->
+        <div class="py-1">        
           <div class="input-group input-group-lg">         
-            <input type="text" [(ngModel)]="title" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" placeholder="Type hier de titel van de les...">
+            <input type="text" [(ngModel)]="title" class="edit-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" placeholder="Type hier de titel van de les...">
           </div>
         </div>
-      </div>
-      <!-- <div class="col-12 col-md-4">
-        <div class="pt-5 py-md-5">
-          <h5>Body:</h5>
-          <div><p style="color: #e0e0e0;">Hier schrijft u de inhoud van de cursus.</p></div>        
-        </div>
-      </div> -->
+      </div>      
       <div class="col-12 col-md-8">        
-        <div class="py-3" style="min-height: 94px;">
+        <div class="py-3">
           <div class="container textEditor">
             <div class="row justify-content-center">
               <div class="textEditor-controls">
@@ -87,28 +72,13 @@
                       <button class="button fas fa-align-right" (click)="justifyRight($event)"></button>
                     </div>
                   </li>
-                  <!--<li>
-                    <div class="textEditor-item">
-                      <button class="button fas fa-play" (click)="addYoutube($event)"></button>                      
-                    </div>
-                  </li> -->      
-                  <li>
-                    <div class="textEditor-item image-upload">
-                      <div class="button">
-                        <i class="icon-file far fa-image"></i>
-                        <input class="input-file" type="file" name="file" (change)="onFileChanged($event)">
-                      </div>                                          
-                    </div>                    
-                  </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
         <div class="">
-          <div #el1 class="col-12 textEditor-textArea" (blur)="onBlur(el1.innerHTML)" contenteditable="true" style="overflow-y: scroll" (focus)="onFocus()" placeholder="Type hier de inhoud van de les...">
-            
-          </div>      <!---->
+          <div #el1 class="col-12 textEditor-textArea" [innerHTML]="tekst" (blur)="onBlur(el1.innerHTML)" contenteditable="true" style="overflow-y: scroll" placeholder="Type hier de inhoud van de les..."></div>      <!---->
         </div>   
         <div class="row py-3">
           <a class="btn btn-info" (click)="save()" style="color: white;">Save</a>      
