--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -4,7 +4,7 @@
     <div class="user-course-navbar">      
       <div class="user-course-navbar navbar navbar-fixed-top bg-info">
         <div class="navbar-left">
-          <a class="toggle-sidebar" (click)="toggleSidebar()">
+          <a class="toggle-sidebar" (click)="toggleSidebar()" style="cursor:pointer;">
             <i class="fas fa-bars text-white"></i>
           </a>
         </div>
