--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -4,7 +4,7 @@
     <div class="editor-navbar">      
       <div class="editor-navbar navbar navbar-fixed-top bg-info">
         <div class="navbar-left">
-          <a class="toggle-sidebar" (click)="toggleSidebar()" style="vertical-align: middle;">
+          <a class="toggle-sidebar" (click)="toggleSidebar()" style="vertical-align: middle; cursor: pointer;">
             <i class="fas fa-bars text-white"></i>
           </a>
           <div class="tile-hover text-center" style="">
@@ -32,31 +32,36 @@
       <div *ngIf="blnCreateCourse" class="container add-course-container">
         <div class="row py-5 justify-content-center">
           <div class="col-12 col-md-8" style="padding: 0; border: 1px solid #e0e0e0;">
-            <div class="title-container p-3" style="border-bottom: 1px solid #e0e0e0; height: 60px;">
-              <h3>Add new course</h3>
-            </div>
-            <div class="py-3">
-              <div class="py-1 px-2">
-                <div class="course-title py-1">
-                  <h5 style="color: #aeb2b8;">naam:</h5>                  
+            <form [formGroup]="courseForm" (ngSubmit)="createCourse(courseForm.value)">
+              <div class="title-container p-3" style="border-bottom: 1px solid #e0e0e0; height: 60px;">
+                <h3>Add new course</h3>
+              </div>
+              <div class="py-3">
+                <div class="py-1 px-2">
+                  <div class="course-title py-1">
+                    <h5 style="color: #aeb2b8;">naam:</h5>                  
+                  </div>
+                  <div class="form-group input-group-lg course-description" style="min-height: 71px;">
+                    <input type="text" formControlName="name" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;"> <!--[(ngModel)]="course_title"-->
+                    <small *ngIf="courseForm.controls['name'].hasError('required') && !courseForm.controls['name'].untouched" id="nameHelp" class="form-text red">Gelieve een cursusnaam in te vullen.</small>                    
+                  </div>
                 </div>
-                <div class="input-group input-group-lg course-description">
-                  <input type="text" [(ngModel)]="course_title" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;">
+                <div class="pt-3 pb-1 px-2">
+                  <div class="course-title py-1">
+                    <h5 style="color: #aeb2b8;">Beschrijving:</h5>                  
+                  </div>
+                  <div class="form-group input-group-lg course-description" style="min-height: 191px;">
+                    <!-- <input type="text" [(ngModel)]="" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;"> -->
+                    <textarea class="form-control" formControlName="descr" name="" rows="5" style="background-color: #fbfbfd;"></textarea> <!--[(ngModel)]="course_description"-->
+                    <small *ngIf="courseForm.controls['descr'].hasError('required') && !courseForm.controls['descr'].untouched"  id="descriptionHelp" class="form-text red">Gelieve een cursus beschrijving in te vullen.</small>
+                  </div>
+                </div>
+                <div class="pt-3 pb-1 px-2">
+                  <button type="submit" class="btn btn-info" [disabled]="!courseForm.valid" [class.disable-btn]='!courseForm.valid' style="color: white;">Create</button> <!--(submit)="createCourse()"-->
+                  <!-- <button type="submit"  class="btn btn-sm alert-secondary" style="padding: .25rem 1rem;">Delete</button> -->
                 </div>
               </div>
-              <div class="pt-3 pb-1 px-2">
-                <div class="course-title py-1">
-                  <h5 style="color: #aeb2b8;">Beschrijving:</h5>                  
-                </div>
-                <div class="input-group input-group-lg course-description">
-                  <!-- <input type="text" [(ngModel)]="" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;"> -->
-                  <textarea class="form-control" [(ngModel)]="course_description" name="" rows="5" style="background-color: #fbfbfd;"></textarea>
-                </div>
-              </div>
-              <div class="pt-3 pb-1 px-2">
-                <a class="btn btn-info" (click)="createCourse()" style="color: white;">Create</a>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -65,22 +70,25 @@
       <div *ngIf="blnCreateChapter" class="container add-chapter-container">
         <div class="row py-5 justify-content-center">
           <div class="col-12 col-md-8" style="padding: 0; border: 1px solid #e0e0e0;">
-            <div class="title-container p-3" style="border-bottom: 1px solid #e0e0e0; height: 60px;">
-              <h3>Add new chapter</h3>
-            </div>
-            <div class="py-3">
-              <div class="py-1 px-2">
-                <div class="course-title py-1">
-                  <h5 style="color: #aeb2b8;">naam:</h5>                  
-                </div>
-                <div class="input-group input-group-lg course-description">
-                  <input type="text" [(ngModel)]="chapter_title" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;">
-                </div>
-              </div>            
-              <div class="pt-3 pb-1 px-2">
-                <a class="btn btn-info" (click)="createChapter()" style="color: white;">Create</a>
+            <form [formGroup]="chapterForm" (ngSubmit)="createChapter(chapterForm.value)">
+              <div class="title-container p-3" style="border-bottom: 1px solid #e0e0e0; height: 60px;">
+                <h3>Add new chapter</h3>
               </div>
-            </div>
+              <div class="py-3">
+                <div class="py-1 px-2">
+                  <div class="course-title py-1">
+                    <h5 style="color: #aeb2b8;">naam:</h5>                  
+                  </div>
+                  <div class="form-group form-group-lg course-description" style="min-height: 61px;">
+                    <input type="text" formControlName="name" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;"> <!--[(ngModel)]="chapter_title" -->
+                    <small *ngIf="chapterForm.controls['name'].hasError('required') && !chapterForm.controls['name'].untouched" id="nameHelp" class="form-text red">Gelieve een hoofdstuk naam in te vullen.</small>
+                  </div>
+                </div>            
+                <div class="pt-3 pb-1 px-2">
+                  <button type="submit" class="btn btn-info" [disabled]="!chapterForm.valid" [class.disable-btn]='!chapterForm.valid' style="color: white;">Creeër</button>                  
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -114,7 +122,7 @@
         <div class="row p-3" style="border-bottom: 1px solid #e0e0e0;">
           <h2>{{active_chapter_title}}</h2>
           <button class="button button-edit ml-auto" (click)="toggleEdit('chapter')">wijzig</button>
-          <button class="button button-delete ml-2" [class.disabled]='!blnDisabled' (click)="deleteChapter()" [disabled]="!blnDisabled"><i class="fas fa-trash"></i></button>
+          <button class="button button-delete ml-2" [class.disabled]='!blnDisabled' data-toggle="modal" data-target="#deleteChapterModal" [disabled]="!blnDisabled"><i class="fas fa-trash"></i></button> <!-- (click)="deleteChapter()"-->
         </div>
         <ul class="row justify-content-center lessons-container" style="padding: 0;">
           <li class="col-md-8 my-3 lessons-item create-item">
@@ -125,14 +133,14 @@
               </div>              
             </a>
           </li>
-          <li class="col-md-8 my-3 lessons-item" *ngFor="let lesson of lessons">
+          <li *ngFor="let lesson of lessons" class="col-md-8 my-3 lessons-item">
             <div class="">
               <div class="p-3" style="">
                 <div style="display: inline-block;"><h3>{{lesson.name}}</h3></div>
-                <div style="display: inline-block; float: right;">
-                  <a class="px-2"><i class="fas fa-eye" [class.published]="true" style="color: #aeb2b8;"></i></a>
+                <div style="display: inline-block; float: right;">                  
+                  <a class="px-2" style="cursor: pointer;"><i class="fas fa-eye" (click)="togglePublish(lesson)" [class.published]="lesson.status == 'published'" style="color: lightgrey;"></i></a>
                   <a class="px-2" [routerLink]="['/edit-lesson',lesson._id]"><i class="fas fa-edit" style="color: #aeb2b8; cursor: pointer;"></i></a>
-                  <a class="px-2" (click)="deleteLesson(lesson._id)" style="cursor: pointer;"><i class="fas fa-trash" style="color: rgb(255, 102, 102);"></i></a>
+                  <a class="px-2" data-toggle="modal" data-target="#deleteLesModal" (click)="setLesson(lesson)" style="cursor: pointer;"><i class="fas fa-trash" style="color: rgb(255, 102, 102);"></i></a> <!--(click)="deleteLesson(lesson)"-->
                 </div>
               </div>
               <div class="p-2" style="background-color: #fbfbfd;">
@@ -148,7 +156,7 @@
         <div class="row p-3" style="border-bottom: 1px solid #e0e0e0;">
           <h2>{{active_course_title}}</h2>
           <button class="button button-edit ml-auto" [class.disabled]='!blnDisabled' (click)="toggleDisabled(blnDisabled)" [disabled]="!blnDisabled">wijzig</button>
-          <button class="button button-delete ml-2" [class.disabled]='!blnDisabled' (click)="deleteCourse()" [disabled]="!blnDisabled"><i class="fas fa-trash"></i></button>
+          <button class="button button-delete ml-2" [class.disabled]='!blnDisabled' data-toggle="modal" data-target="#deleteCourseModal" [disabled]="!blnDisabled"><i class="fas fa-trash"></i></button><!--(click)="deleteCourse()"-->
         </div>
         <div class="py-3">
           <div class="py-1 px-2">
@@ -195,16 +203,22 @@
     </div>
     <div class="sidebar-section-list">
       <div class="input-group py-3">
-        <select class="custom-select course-select" (change)="changeCourse($event.target.value)" id="courseSelect" aria-label="Course select">
-          <option *ngFor="let course of courses" value="course._id" [value]="course._id"><i class="fas fa-book">{{course.name}}</i></option>          
-        </select>        
+        <select *ngIf="courses.length > 0" class="custom-select course-select" (change)="changeCourse($event.target.value)" id="courseSelect" aria-label="Course select">
+          <option *ngFor="let course of courses" value="course._id" [value]="course._id" style="text-transform: capitalize;"><i class="fas fa-book">{{course.name}}</i></option>          
+        </select>   
+        <div *ngIf='courses.length <= 0' class="my-2" (click)="toggleCreate('course')" style="width: inherit; cursor: pointer;">
+          <div class="course-create-container py-3 pl-3">
+            <i class="course-create-icon fas fa-plus"></i>
+            <span class="course-create-data pl-2">creeër cursus</span>                
+          </div>
+        </div>     
       </div>
-      <div class="sidebar-course-chapters">
+      <div *ngIf="sections" class="sidebar-course-chapters">
         <ul cdkDropList class="chapter-list" (cdkDropListDropped)="drop($event)">
             <li *ngFor="let section of sections; let a = index" (click)="checkChapter(a)" class="chapter-item my-2" [class.activated]="section.active" cdkDrag>
               <div class="chapter-item-container py-3 pl-3">
                 <i class="chapter-item-icon fas fa-folder"></i>
-                <span class="chapter-item-name pl-2">{{section.name}}</span>
+                <span class="chapter-item-name pl-2" style="text-transform: capitalize;">{{section.name}}</span>
                 <i class="chapter-item-drag fas fa-arrows-alt-v" cdkDragHandle></i>
               </div>
             </li>
@@ -227,4 +241,82 @@
       </div> -->
     </div>
   </div>
+</div>
+
+<div id="deleteCourseModal" #deleteCourseModal class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Ben je zeker?</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+        <div class="modal-body">
+          <div>
+            <p><strong>Met deze actie zal volgende cursus - <span class="red">{{active_course_title}}</span> - verwijdert worden.</strong></p>
+            <p><strong>Ook alle hoofdstukken gekoppeld aan deze cursus zullen worden verwijdert.</strong></p>
+            <p><strong>Ook alle lessen gekoppeld aan de hoofdstukken zullen worden verwijdert.</strong></p>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-control">              
+            <span style="margin: 0px 10px;">
+              <button class="btn btn-sm btn-secondary" (click)="deleteCourse()" style="padding: .25rem 1rem;">Verwijder</button>
+            </span>
+            <a class="cancel" href="#" data-dismiss="modal">cancel</a>              
+          </div>
+        </div>
+    </div>
+  </div>    
+</div>
+
+<div id="deleteChapterModal" #deleteChapterModal class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Ben je zeker?</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+        <div class="modal-body">
+          <div>
+            <p><strong>Met deze actie zal volgend hoofdstuk - <span class="red">{{active_chapter_title}}</span> - verwijdert worden.</strong></p>
+            <p><strong>Ook alle lessen gekoppeld aan dit hoofdstuk zullen worden verwijdert.</strong></p>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-control">              
+            <span style="margin: 0px 10px;">
+              <button class="btn btn-sm btn-secondary" (click)="deleteChapter()" style="padding: .25rem 1rem;">Verwijder</button>
+            </span>
+            <a class="cancel" href="#" data-dismiss="modal">cancel</a>              
+          </div>
+        </div>
+    </div>
+  </div>    
+</div>
+
+<div id="deleteLesModal" #deleteLesModal class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Ben je zeker?</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+        <div class="modal-body">
+          <div>
+            <p><strong>Met deze actie zal volgend les - <span class="red">{{active_lesson.name}}</span> - verwijdert worden.</strong></p>            
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-control">              
+            <span style="margin: 0px 10px;">
+              <button class="btn btn-sm btn-secondary" (click)="deleteLesson()" style="padding: .25rem 1rem;">Verwijder</button>
+            </span>
+            <a class="cancel" href="#" data-dismiss="modal">cancel</a>              
+          </div>
+        </div>
+    </div>
+  </div>    
 </div>
